apps/python-hello-world/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-hello-world
  name: python-hello-world
spec:
  ports:
  - port: 5050
    protocol: TCP
    targetPort: 5050
  selector:
    app: python-hello-world
  type: NodePort
